--- a/module_1/lecture_02_css_intro/align.html
+++ b/module_1/lecture_02_css_intro/align.html
@@ -10,7 +10,7 @@
         }
       #root {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         width: 100vw;
         height: 100vh;
         justify-content: end; /* aligns items along the main axis or major axis*/ 
@@ -26,6 +26,7 @@
   </head>
   <body>
     <div id="root">
-      <button id="main" class="click">Button 1</button>
+        <button id="main" class="click">Button 1</button>
+        <button id="main" class="click">Button 2</button>
   </body>
 </html>
